update backend build

--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5782d5; }
+  background: #2402ff; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #574208; }
+  background: #9cb1db; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0f2caa; }
+  background: #ae6927; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c9010f; }
+  background: #d39e78; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5b268c; }
+  background: #a9375b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a2ebd7; }
+  background: #b08756; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #185019; }
+  background: #fd7d96; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2896e6; }
+  background: #cf5f25; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a68d63; }
+  background: #041341; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #90b15d; }
+  background: #e2e15b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c18f68; }
+  background: #1d404a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6c0c73; }
+  background: #6a15fc; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #02eb15; }
+  background: #389377; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #069371; }
+  background: #7f0c22; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f8a3f5; }
+  background: #7187d7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #568e8a; }
+  background: #1c6673; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0e7403; }
+  background: #5ba90c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3cdfd9; }
+  background: #05c3ac; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #20d41a; }
+  background: #adfe2d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #413305; }
+  background: #608d46; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d6851e; }
+  background: #d0e987; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4bfb55; }
+  background: #bb9053; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b044ee; }
+  background: #27acae; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #061ed7; }
+  background: #394d0c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a903e5; }
+  background: #795a96; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #698e8d; }
+  background: #fb7535; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #16a07d; }
+  background: #136caf; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c49b5c; }
+  background: #46a253; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #56ed99; }
+  background: #8e8a8c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #201388; }
+  background: #4ca326; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2c066a; }
+  background: #e93246; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #16352d; }
+  background: #62cba9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #6c757d; }
+  background: #301042; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2fab93; }
+  background: #d8ff32; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6817f3; }
+  background: #c9fb91; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4cdf3c; }
+  background: #ba15be; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7579bb; }
+  background: #d1dd20; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #03aa8e; }
+  background: #71e0d1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f90767; }
+  background: #61db1e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4d9e6c; }
+  background: #9a83c4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d7433f; }
+  background: #368f59; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #039982; }
+  background: #3ea04d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f4be7e; }
+  background: #83f6b8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d6a23c; }
+  background: #70abeb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7934e6; }
+  background: #eae29e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2dda2c; }
+  background: #b453c5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #0be94b; }
+  background: #aa6030; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0f750c; }
+  background: #3f2de2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #fd6aef; }
+  background: #98bbb3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c982fe; }
+  background: #8d206a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cd85cd; }
+  background: #45e026; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b8a274; }
+  background: #202a38; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6b79b7; }
+  background: #984a05; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7dfa3c; }
+  background: #e62a93; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ec59e6; }
+  background: #a7c2a0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6e4c52; }
+  background: #d76ecb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #bbbabe; }
+  background: #be712c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8d7bc3; }
+  background: #9070b8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #816183; }
+  background: #a9a8b9; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e368eb; }
+  background: #36ebe5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #30c967; }
+  background: #0a944c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #179208; }
+  background: #d39cfb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #755127; }
+  background: #8823cb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b2da3a; }
+  background: #5c2288; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fb0a65; }
+  background: #fec079; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #218a8c; }
+  background: #f18b28; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a5810d; }
+  background: #6883fd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8a0ac8; }
+  background: #da28f9; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8bc0d8; }
+  background: #de69cd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ddb941; }
+  background: #5f219f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #934a47; }
+  background: #eb4d47; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f10b65; }
+  background: #4a2b9b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e1611a; }
+  background: #b8e5f6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fa4f6a; }
+  background: #a174cb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8b8564; }
+  background: #28a286; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #84370c; }
+  background: #b385d0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f9b099; }
+  background: #ce7282; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #df49eb; }
+  background: #5c15b2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bf50d5; }
+  background: #90ea4b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d92752; }
+  background: #dce922; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #702672; }
+  background: #effe51; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f571b9; }
+  background: #3202db; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e1ddcd; }
+  background: #04d549; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e4fa4c; }
+  background: #7fca02; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5e2920; }
+  background: #1e2883; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a3cc94; }
+  background: #3f9711; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ee606b; }
+  background: #ad3418; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f5eeb9; }
+  background: #54c013; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9e5de3; }
+  background: #c37eb8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4c8654; }
+  background: #de2c45; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #605e17; }
+  background: #7d8ffb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #fa9be7; }
+  background: #bbf1fb; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #35655a; }
+  background: #541170; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b07ace; }
+  background: #4b89ee; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1e832f; }
+  background: #76a5df; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e8e2da; }
+  background: #499545; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9898cf; }
+  background: #0401c4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d003ac; }
+  background: #998875; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #71386b; }
+  background: #eac831; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #bf9b8b; }
+  background: #7b032a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
