--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2402ff; }
+  background: #ccf017; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9cb1db; }
+  background: #6bc966; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ae6927; }
+  background: #77c65b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d39e78; }
+  background: #940964; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a9375b; }
+  background: #ef7d7a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b08756; }
+  background: #d6331f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fd7d96; }
+  background: #85d87b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cf5f25; }
+  background: #687a6c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #041341; }
+  background: #2713b2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e2e15b; }
+  background: #446e52; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1d404a; }
+  background: #7a5728; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6a15fc; }
+  background: #9a70b3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #389377; }
+  background: #ed1ada; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7f0c22; }
+  background: #1a7cdd; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7187d7; }
+  background: #718756; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1c6673; }
+  background: #852d93; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5ba90c; }
+  background: #e194f6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #05c3ac; }
+  background: #917252; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #adfe2d; }
+  background: #5f74c5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #608d46; }
+  background: #0de8c4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d0e987; }
+  background: #ea745e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bb9053; }
+  background: #04b5c8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #27acae; }
+  background: #04fbb7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #394d0c; }
+  background: #4dd461; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #795a96; }
+  background: #d66fdb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fb7535; }
+  background: #fa65de; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #136caf; }
+  background: #ed701d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #46a253; }
+  background: #949952; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8e8a8c; }
+  background: #9fc6df; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4ca326; }
+  background: #5ce189; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e93246; }
+  background: #9899ef; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #62cba9; }
+  background: #bf7ec5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #301042; }
+  background: #d2d824; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d8ff32; }
+  background: #698619; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c9fb91; }
+  background: #3ddd43; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ba15be; }
+  background: #c8f9fd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d1dd20; }
+  background: #cd533c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #71e0d1; }
+  background: #b2d6f6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #61db1e; }
+  background: #2c15c7; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9a83c4; }
+  background: #d3e945; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #368f59; }
+  background: #60312c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3ea04d; }
+  background: #54b244; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #83f6b8; }
+  background: #b0819c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #70abeb; }
+  background: #99791d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #eae29e; }
+  background: #82b113; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b453c5; }
+  background: #3710a4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #aa6030; }
+  background: #ef70fc; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3f2de2; }
+  background: #53bd60; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #98bbb3; }
+  background: #7ddc11; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8d206a; }
+  background: #cfd1c0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #45e026; }
+  background: #b98c58; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #202a38; }
+  background: #2fb9b7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #984a05; }
+  background: #881710; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e62a93; }
+  background: #2c8557; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a7c2a0; }
+  background: #3e20f3; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d76ecb; }
+  background: #a0426e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #be712c; }
+  background: #25deea; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9070b8; }
+  background: #cbed6b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a9a8b9; }
+  background: #6d6f58; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #36ebe5; }
+  background: #1a97f1; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0a944c; }
+  background: #9dafd8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d39cfb; }
+  background: #a1fa79; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8823cb; }
+  background: #1287f0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5c2288; }
+  background: #01ffa2; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fec079; }
+  background: #d38707; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f18b28; }
+  background: #d543f6; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6883fd; }
+  background: #5ef60a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #da28f9; }
+  background: #13ba37; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #de69cd; }
+  background: #4c271b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5f219f; }
+  background: #f87f68; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #eb4d47; }
+  background: #89d021; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4a2b9b; }
+  background: #5c5b0e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b8e5f6; }
+  background: #c84e2c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a174cb; }
+  background: #3bb862; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #28a286; }
+  background: #ef48af; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b385d0; }
+  background: #bdb3a9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ce7282; }
+  background: #1538a0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5c15b2; }
+  background: #f1765e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #90ea4b; }
+  background: #3548e2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #dce922; }
+  background: #ff7912; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #effe51; }
+  background: #1e28b1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3202db; }
+  background: #33373c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #04d549; }
+  background: #d7a305; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7fca02; }
+  background: #951338; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1e2883; }
+  background: #17f47a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #3f9711; }
+  background: #19e154; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ad3418; }
+  background: #04c79f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #54c013; }
+  background: #42c36d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c37eb8; }
+  background: #e93b63; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #de2c45; }
+  background: #e29834; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7d8ffb; }
+  background: #64c7ab; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bbf1fb; }
+  background: #31a877; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #541170; }
+  background: #0ea3cc; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4b89ee; }
+  background: #1acc2f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #76a5df; }
+  background: #8b7e31; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #499545; }
+  background: #e3513a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0401c4; }
+  background: #c97d8e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #998875; }
+  background: #8ce7cf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #eac831; }
+  background: #a087c2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7b032a; }
+  background: #a9c573; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
