--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2402ff; }
+  background: #56fdad; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9cb1db; }
+  background: #1efa3e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ae6927; }
+  background: #070bcd; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d39e78; }
+  background: #2486fb; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a9375b; }
+  background: #550515; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b08756; }
+  background: #7a9110; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fd7d96; }
+  background: #4492ce; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cf5f25; }
+  background: #4db5ec; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #041341; }
+  background: #575a91; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e2e15b; }
+  background: #0971c8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1d404a; }
+  background: #c1090d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6a15fc; }
+  background: #b67b45; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #389377; }
+  background: #b7dc0b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7f0c22; }
+  background: #0a3fc4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7187d7; }
+  background: #09e8f3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1c6673; }
+  background: #92b1d8; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5ba90c; }
+  background: #56378a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #05c3ac; }
+  background: #cf806f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #adfe2d; }
+  background: #845ada; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #608d46; }
+  background: #9121e1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d0e987; }
+  background: #55cfcc; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bb9053; }
+  background: #4d4ef8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #27acae; }
+  background: #e21458; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #394d0c; }
+  background: #e61257; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #795a96; }
+  background: #6bf8cd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fb7535; }
+  background: #f5ef3c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #136caf; }
+  background: #01d344; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #46a253; }
+  background: #90573d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8e8a8c; }
+  background: #1a279a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4ca326; }
+  background: #087ec6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e93246; }
+  background: #635a54; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #62cba9; }
+  background: #fa6429; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #301042; }
+  background: #c00cf0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d8ff32; }
+  background: #cb33e8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c9fb91; }
+  background: #bfc299; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ba15be; }
+  background: #38f3fe; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d1dd20; }
+  background: #ecd69f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #71e0d1; }
+  background: #a27b78; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #61db1e; }
+  background: #f6f260; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9a83c4; }
+  background: #f06046; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #368f59; }
+  background: #ffea8d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3ea04d; }
+  background: #137d4a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #83f6b8; }
+  background: #a52252; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #70abeb; }
+  background: #3cb1cf; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #eae29e; }
+  background: #56949c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b453c5; }
+  background: #5024c8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #aa6030; }
+  background: #f77f65; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3f2de2; }
+  background: #d30762; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #98bbb3; }
+  background: #d349ad; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8d206a; }
+  background: #6e62f4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #45e026; }
+  background: #99027e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #202a38; }
+  background: #4fec0f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #984a05; }
+  background: #b19988; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e62a93; }
+  background: #598bf7; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a7c2a0; }
+  background: #9a3c4a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d76ecb; }
+  background: #e228fe; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #be712c; }
+  background: #60e531; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9070b8; }
+  background: #d9e15e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a9a8b9; }
+  background: #cfa146; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #36ebe5; }
+  background: #c4182f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0a944c; }
+  background: #4c203e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d39cfb; }
+  background: #8b1a96; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8823cb; }
+  background: #964059; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5c2288; }
+  background: #e1c011; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fec079; }
+  background: #fb169b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f18b28; }
+  background: #78ee11; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6883fd; }
+  background: #5d925c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #da28f9; }
+  background: #b304dd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #de69cd; }
+  background: #11eff3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5f219f; }
+  background: #b37c0d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #eb4d47; }
+  background: #535f49; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4a2b9b; }
+  background: #7564ea; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b8e5f6; }
+  background: #af815b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a174cb; }
+  background: #3dd94e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #28a286; }
+  background: #a78fa0; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b385d0; }
+  background: #22f9ba; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ce7282; }
+  background: #75b4e6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5c15b2; }
+  background: #d24353; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #90ea4b; }
+  background: #df32d2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #dce922; }
+  background: #3af94d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #effe51; }
+  background: #b6d19d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3202db; }
+  background: #94ab25; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #04d549; }
+  background: #068f69; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7fca02; }
+  background: #69dbab; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1e2883; }
+  background: #1f02d4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #3f9711; }
+  background: #d8d8b4; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ad3418; }
+  background: #5b2348; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #54c013; }
+  background: #c481ca; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c37eb8; }
+  background: #dfe551; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #de2c45; }
+  background: #673f8a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7d8ffb; }
+  background: #c39e05; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bbf1fb; }
+  background: #ce7667; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #541170; }
+  background: #ec52cb; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4b89ee; }
+  background: #79ffb9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #76a5df; }
+  background: #cc4ce0; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #499545; }
+  background: #dbaa12; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0401c4; }
+  background: #a6bfc8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #998875; }
+  background: #2a2031; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #eac831; }
+  background: #43b7ca; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7b032a; }
+  background: #ca837c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11974,8 +11974,11 @@ input:checked + .sliders:before {
         border-bottom: 8px solid transparent;
         border-left: 8px solid #e0e0e1;
         position: absolute;
-        top: 35%;
-        right: -7px; }
+        top: 0;
+        right: -10px;
+        bottom: 0px;
+        display: flex;
+        margin: auto; }
     .process-button-wrapper ul .no-arrow::before {
       content: "";
       display: none; }
