--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1281,8 +1281,11 @@ input:checked+.sliders:before {
           border-bottom: 8px solid transparent;
           border-left: 8px solid #e0e0e1;
           position: absolute;
-          top: 35%;
-          right: -7px;
+          top: 0;
+          right: -10px;
+          bottom: 0px;
+          display: flex;
+          margin: auto;
         }
       }
     }
